--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>9.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>6.0.8</version>
+		</dependency>
 
 	</dependencies>
 
